tests/NormalTests/paczka2/big_fuzzy/49221506.err
Error in line 1: 4tD S235 94,1
Error in line 2: 32iABfRUqO S149 66,4
Error in line 3: 4tD S908 80,4
Error in line 4: 32iABfRUqO S908 24,2
Error in line 6: 32iABfRUqO S235 71,3
Error in line 19: TSfe9WN50kM S149 58,3
Error in line 30: dqnpZ S908 3,3
Error in line 33: dqnpZ A965 91,3
Error in line 38: 32iABfRUqO S149 50,85
Error in line 39: D2S S908 -3,2
Error in line 46: 32iABfRUqO S235 96,81
Error in line 32: 32iABfRUqO S149 10,8
Error in line 40: TSfe9WN50kM S235 75,0
Error in line 50: 32iABfRUqO S235 223,9
Error in line 56: 32iABfRUqO S149 1,6
Error in line 61: 4tD S235 83,3
Error in line 73: 4tD S$08 5$,5
Error in line 74: TSfe9WN50kM S235 -1,3
Error in line 71: TSfe9WN50kM S235 72,8
Error in line 75: TSfe9WN50kM S908 91,2
Error in line 80: TSfe9WN50kM S235 88,9
Error in line 84: dqnpZ S235 55,4
Error in line 87: dqnpZ S908 83,0
Error in line 77: 4tD S908 164,8
Error in line 93: dqnpZ A965 139,6
Error in line 101: ?A9^5
Error in line 104: S149 A965 7,7
Error in line 95: D2S S908 34,3
Error in line 107: D2S A965 10,6
Error in line 114: 32iABfRUqO A965 15,2
Error in line 123: S149 A965 4,5
Error in line 125: S149 S908 2,3
Error in line 115: 4tD S149 13,3
Error in line 129: 4tD A965 65,6
Error in line 134: D2S A965 37,0
Error in line 136: S149 S149 96,8
Error in line 137: 4tD S235 34,6
Error in line 135: D2S S235 90,8
Error in line 143: D2S S908 41,1
Error in line 160: S149 S235 62,3
Error in line 170: UfFVEN S235 49,7
Error in line 182: dqnpZ S149 41,8
Error in line 191: 32iABfRUqO S235 34,2
Error in line 190: dqnpZ S908 8,6
Error in line 211: dqnpZ S235 65,89
Error in line 198: S149 S149 58,5
Error in line 215: UfFVEN A965 50,4
Error in line 202: dqnpZ S235 28,9
Error in line 181: 4tD S149 25,3
Error in line 223: S149 S235 240,43
Error in line 219: 4tD S908 38,0
Error in line 212: S149 S235 64,6
Error in line 226: 4tD S149 50,0
Error in line 213: D2S S235 53,6
Error in line 233: UfFVEN S908 81,7
Error in line 243: UfFVEN S149 10,8
